# GradGPT

./: .gitignore  README.md  pyproject.toml
gradgpt/: __init__.py  gradgpt.py  gradgpt_utils.py
tests/: test_gradgpt_1param.py  test_gradgpt_2param.py  test_gradgpt_OLS.py
