[project]
name = "gradgpt"
version = "0.1.3"
description = "Adam who? Let a cutting-edge LLM be your next PyTorch optimiser."
authors = [{ name = "Ronit Kunkolienker", email = "ronitkunk@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "langchain",
    "numpy",
    "pydantic",
    "optiviz",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"